[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "alpss"
version = "0.0.0"
description = "Automated analysis of photonic Doppler velocimetry spall signals with uncertainty"
authors = ["Jake Diamond <jdiamo15@jhu.edu>", "K. T. Ramesh <ramesh@jhu.edu>"]
maintainers = ["Jake Diamond <jdiamo15@jhu.edu>", "Kacper Kowalik <xarthisius.kk@gmail.com>", "Ali Rachidi <arachid1@jhu.edu>", "All the contributors"]
license = "GPL-3"
readme = "README.md"
keywords = ["material science", "spall"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = ">=1.24"
scipy = ">1.12"
pandas = "*"
matplotlib = "*"
watchdog = "*"
opencv-python = "*"
IPython = "*"

[tool.poetry.scripts]
alpss = "alpss.commands:alpss_cli"
alpss-watch = "alpss.commands:start_watcher"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)"

